--- a/canaryapp/app.json
+++ b/canaryapp/app.json
@@ -5,7 +5,7 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/apple-touch-icon.png",
-    "scheme": "canaryapp",
+    "scheme": "canaryos",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
