feat: Implement on-device scam scanner with new UI, services, and TFLite model integration, alongside related documentation and dependency updates.

--- a/canaryapp/.gitignore
+++ b/canaryapp/.gitignore
@@ -45,3 +45,10 @@ app-example
 # Vercel AI SDK
 .vercel
 *.env
+
+# bug reports
+bugreport-*.zip
+
+# module builds
+modules/*/android/build
+modules/*/android/.gradle
